# transport_tests

./: README.md  pyproject.toml
config/: settings.py  urls.py
logistics/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
logistics/migrations/: 0001_initial.py  0002_alter_item_options_alter_location_options_and_more.py  0003_shipment_estimated_arrival_time_shipment_status_and_more.py  0004_remove_location_latitude_remove_location_longitude_and_more.py
logistics/templates/base/: base.html
logistics/templates/logistics/dashboard/: index.html
logistics/templates/logistics/locations/: form.html
logistics/templates/logistics/orders/: detail.html  form.html  item_form.html  list.html
logistics/templates/logistics/partials/: delete_button.html
logistics/templates/logistics/pickup/: dashboard.html  detail.html
logistics/templates/logistics/routes/: detail.html  form.html  list.html
logistics/templates/logistics/seller/: dashboard.html  detail.html  form.html  order_table.html
logistics/templates/logistics/shipments/: add_items.html  add_items_enhanced.html  detail.html  form.html  list.html  unload.html  unload_form.html
logistics/templates/logistics/warehouse/: dashboard.html  detail.html  receive_items.html
logistics/utils/: routing.py
