[project]
name = "logistics-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Kotaz",email = "semechkagent@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "shortuuid (>=1.0.13,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"
pytest-django = "^4.11.1"
pytest = "^8.3.5"
coverage = "^7.8.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]